--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script type="module" defer src="index.js"></script>
+    <script type="module" src="index.js"></script>
     <title>Prices-Formulas-View</title>
   </head>
   <body>
