--- a/index.html
+++ b/index.html
@@ -8,7 +8,5 @@
     <script type="module" src="index.js"></script>
     <title>Prices-Formulas-View</title>
   </head>
-  <body>
-    <main id="root"></main>
-  </body>
+  <body id="root"></body>
 </html>
